Changelog
=========

5.2-dev - (unreleased)
----------------------
* Change: implemented default template for external promotions. Now google 
  search results will have proper templates with active links.
  [demarant]
* Upgrade step: replace base_view with promotion_view in portal_types
  for type Promotion. Already done on production.
  [demarant]
* Change: removed protect_email transform
  [ghicaale refs #4926]
* Bug fix: fixed profile version number
  [ghicaale]
* Buf fix: fixed html_eea_chain transform chain
  [ghicaale]
* Upgrade step: under www/portal_setup/manage_upgrades:
   - select "Products.EEAContentTypes:default"
   - click "choose profile"
   - click "show"
   - select both upgrade steps for 4.19 to 5.2
   - click "upgrade"
   - svn del Products.EEAContentTypes/transforms/protect_email.py
   - svn commit
   - [ghicaale refs #4926]
* Bug fix: fixed EEA organigram for cases when there is no Deputy Director.
  [demarant fixes #5402]
* Bug fix: reference jquery.js in a way that is compatible also with Plone 4.2
  [ichimdav #5398]
* Bug fix: added Topic content type info in profile, to fix tests 
  [tiberich #5346]
* Bug fix: fix googleEarthView logic to use IGeoTagged information instead of 
  IGeoPositioned
  [ichimdav #5386]
* Bug fix: fixed google_earth page template from breaking on soer pages 
  [ichimdav #5386]
* Bug fix: return a number instead of a boolean for the max number in syndication
  in order for search RSS to display more than 1 result
  [ichimdav #5354]

5.1 - (2012-07-13)
------------------
* Feature: re-enabled eea.relations widget for Base Content
  [ichimdav #4705]
* Bug fix: display validation error when translating if error is present
  [ichimdav #5302]
* Bug Fix: Fixed missing i18n attributes, i18n:domain and duplicate keys
  in .pt 
  [prospchr refs #5162]

5.0 - (2012-06-20)
------------------
* Bug fix: fixed rdf dcterms:isReplacedBy (it was set to wrongly to replacedBy)
  [demarant fixes #5129]